--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="y2">Revitalize, Hydrate, and Rejuvenate Your Skin for a Youthful, <span class="c1">Ageless Appearance</span> </p>
             
             <div class="contact-img">
-                <img src="pexels-photo-8129912-removebg.png" class="top-right-image">
+                <img src="pexels-photo-8129912-removebg.png">
             </div>
     </section>
     <div class="ctn">
