--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <button class="btn">shop now</button>
 </div>
 <div class="reviewss">
-<p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9734; <span class="reviews">350+ Reviews</span></p>
+<p class="rate"> &#9733;&#9733;&#9733;&#9733; <span class="reviews">350+ Reviews</span></p>
 </div>
 </body>
 </html>
