--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav id="menubar">
         <div class="container">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="form.html">Register</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
