--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
             <h1>Rediscover Radiant Beauty: Unveil Your Natural <span>Glow</span> with Our Luxurious Facial Cream!</h1>
         </div>
             <p class="y2">Revitalize, Hydrate, and Rejuvenate Your Skin for a Youthful, <span class="c1">Ageless Appearance</span> </p>
+            <button class="btn">shop now</button>
             
+<p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9733;<span class="reviews">400+ Reviews</span></p>
             <div class="contact-img">
                 <img src="pexels-photo-8129912-removebg.png">
             </div>
     </section>
     <div class="ctn">
-    <button class="btn">shop now</button>
+    
 </div>
 <div class="reviewss">
-<p class="rate"> &#9733;&#9733;&#9733;&#9733; <span class="reviews">350+ Reviews</span></p>
 </div>
 </body>
 </html>
