files put into the appropriate folders

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Rediscover Radiant Beauty: Unveil Your Natural <span>Glow</span> with Our Luxurious Facial Cream!</h1>
         </div>
             <p class="y2">Revitalize, Hydrate, and Rejuvenate Your Skin for a Youthful, <span class="c1">Ageless Appearance</span> </p>
-            <button class="btn">shop now</button>
+           <button class="btn">SHOP NOW</a> </button>
             
 <p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9733;<span class="reviews">400+ Reviews</span></p>
             <div class="contact-img">
