--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menu"></div>
     <nav id="menubar">
         <div class="container">
-        <ul>
+        <ul class="contents">
             <li><a href="form.html">Register</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
@@ -25,6 +25,8 @@
         </ul>
     </div>
 </nav>
+
+
 <hr color="white">
     <section class="Headline">
         <div class="text-wrapper">
