--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
 <body>
     <div class="form">
         <div class="title">Welcome</div>
-        <div class="subtitle">Let's create your account!</div>
+        <div class="subtitle">Let's create your account ASAP!</div>
         <div class="input-container ic1">
           <input id="firstname" class="input" type="text" placeholder=" " />
           <div class="cut"></div>
