--- a/review.html
+++ b/review.html
@@ -40,13 +40,15 @@
         }
 
         a:hover{
-            color: #fff;
+            color: #333;
         }
 
         a{
             text-decoration: none;
             color: #f39c12;
             text-align: center;
+
+            padding: 20px;
             
         }
     </style>
