--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="container">
         <ul class="contents">
             <li><a href="form.html">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="login.html">log-in</a></li>
+            <li><a href="review.html">Reviews</a></l
+            <li><a href="#">Shop now</a></li>
             
         </ul>
     </div>
