--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <ul class="contents">
             <li><a href="form.html">Register</a></li>
             <li><a href="login.html">login</a></li>
-            <li><a href="review.html">Reviews</a></l
-            <li><a href="#">Shop</a></li>
+            <li><a href="review.html">Reviews</a></li>
+    
             
         </ul>
     </div>
