login button background color changed to purple

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         <input type="password" placeholder="Password">  
         <button>Login</button>  
        </form>  
-       <a href="index.html" class="center-link">GO BACK TO HOME PAGE</a> 
+       <a href="index.html" class="center-link">Go Back To Home Page</a> 
       
 </body>
 </html>
