--- a/form.html
+++ b/form.html
@@ -12,6 +12,7 @@
     <title>Welcome</title>
 </head>
 <body>
+  
     <div class="form">
         <div class="title">Welcome</div>
         <div class="subtitle">Let's create your account ASAP!</div>
@@ -35,6 +36,7 @@
         <p>Already have an account? <a href="login.html"><span>Login</span></p>
     </a>
       </div>
-      
+      <img src="[removal.ai]_576562dc-2480-44ac-a174-3a0de43b7758-pexels-ron-lach-8129916_SSUOOV.png">
+      <div style="margin-top: 500px;"></div>
 </body>
 </html>
