--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <hr color="white">
     <section class="Headline">
         <div class="text-wrapper">
-            <h1>Rediscover Radiant Beauty: Unveil Your Natural <span>Glow</span> with Our Luxurious Facial Cream!</h1>
+            <h1>Rediscover Radiant Beauty Unveil Your Natural <span>Glow</span> with Our Luxurious Facial Cream!</h1>
         </div>
            <p class="y2">Revitalize, Hydrate, and Rejuvenate Your Skin for a Youthful, <span class="c1">Ageless Appearance</span> </p>
         
