--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
           <div class="cut cut-short"></div>
           <label for="email" class="placeholder">Email</>
         </div>
-        <button type="text" class="submit">submit</button>
+        <button type="text" class="submit">Submit</button>
         
         <p>Already have an account? <a href="login.html"><span>Login</span></p>
     </a>
