web page titles changed

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h3>Welcome back, Please <span>log in</span> below</h3>
+        <h3>Welcome back, Please <span>log in</span> below.</h3>
     </header>
     <form class="login">  
         <input type="text" placeholder="Username">  
