box shadow added

--- a/review.html
+++ b/review.html
@@ -15,7 +15,7 @@
             padding: 0;
         }
         header {
-            background-color: #333;
+            background-color: black;
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -28,7 +28,7 @@
             padding: 20px;
             margin: 20px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
         }
         .rating {
             color: #f39c12;
@@ -60,7 +60,7 @@
     <div class="review">
         <div class="rating">⭐⭐⭐⭐⭐</div>
         <p>This facial cream is amazing! It left my skin feeling smooth and refreshed. I've been using it for a month now, and I've noticed a significant improvement in my skin's texture and tone. Highly recommended!</p>
-        <p>- Happy Customer</p>
+        <p>-- Happy Customer</p>
     </div>
 
     <a href="index.html">click here to go back to home page</a>
