--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9733;<span class="reviews">400+ Reviews</span></p>
 </a>
             <div class="contact-img">
-                <img src="pexels-photo-8129912-removebg.png">
+                <img src="pexels-tara-winstead-6682950-PhotoRoom.png-PhotoRoom.png">
             </div>
     </section>
     <div class="ctn">
