--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static' filename='style.css")}}>
+    <link rel="stylesheet" href="style.css">
     <title>Facial cream landing page!</title>
 </head>
 <body>
@@ -38,7 +38,7 @@
 <p class="rate"> &#9733;&#9733;&#9733;&#9733;&#9733;<span class="reviews">400+ Reviews</span></p>
 </a>
             <div class="contact-img">
-                <img src="pexels-jana-kukebal-6496455-transformed.png">
+                <img src="transformed.png">
             </div>
     </section>
     <div class="ctn">
